--- a/Web-Application/Views/Book/DeleteBook.cshtml
+++ b/Web-Application/Views/Book/DeleteBook.cshtml
@@ -6,7 +6,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <form asp-action="DeleteBook">
+            <form asp-action="DeleteBook" method="post">
                 <input asp-for="ID" type="hidden" />
 
                 <div class="border rounded p-4 shadow-sm bg-light">
